# bobot-c

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Untitled
src/: lwipopts.h  main.c
src/bobot/: bobot.h
src/bobot/impl/: bobot.c
src/config/: config.h
src/debug/: debug.h
src/debug/impl/: debug.c
src/encoder/: encoder.h
src/encoder/impl/: encoder.c
src/h_bridge/: h_bridge.h
src/h_bridge/impl/: h_bridge.c
src/mapman/: mapman.h
src/mapman/impl/: mapman.c
src/net/: net.h
src/net/impl/: debug.c  mapman.c  net.c  net_debug.c
src/pid/: pid.h
src/pid/impl/: pid.c
src/pwm/: pwm.h
src/pwm/impl/: pwm.c
src/rgb_led/: rgb_led.h
src/rgb_led/impl/: rgb_led.c
src/rgb_sensor/: rgb_sensor.h
src/rgb_sensor/impl/: rgb_sensor.c
src/servo/: servo.h
src/servo/impl/: servo.c
src/ultra/: ultra.h
src/ultra/impl/: ultra.c
src/util/: util.h
src/util/impl/: util.c
